FX-470: Replace java assert's with TestNG Assert.assert...
git-svn-id: http://svn.flexive.org/repository/flexive/trunk@1071 d35d4baa-7912-0410-b0ae-edacad209e15